name:                b9
version:             0.6.0
synopsis:            A tool and library for building virtual machine images.

description:         Build virtual machine images for vm-deployments; resize,
                     un-partition, create from scratch or convert disk image
                     files in a variety of formats; assemble and generate all
                     associated files from templates and regular files.


                     VM images can further be modifed through scripts, which are
                     executed in LXC containers into which the vm-images as well
                     as arbitrary directories from the host are mounted.


                     All assembled files can also be accessed by vm build
                     scripts through a special directory mounted in the build
                     container, and/or can be written to directories, ISO- or
                     VFAT-images.


                     The ISO/VFAT images that B9 creates are compatible to
                     'cloud-init's 'NoCloud' data source;


                     B9 is also very well suited for compiling in a
                     containerized environment. For these applications, the
                     images can be marked as 'Transient' to indicate no further
                     interest in the VM-image itself, and B9 will discard them
                     after the build.


                     B9 will never over-write source files, not even large
                     vm-image files - there is no intended way to modify a
                     source vm-image file 'in-place'.


                     B9 operates in random build directories, which are
                     discarded when the build exists.

license:             MIT
license-file:        LICENSE
author:              Sven Heyll <svh@posteo.de>
maintainer:          svh@posteo.de
homepage:            https://github.com/sheyll/b9-vm-image-builder
bug-reports:         https://github.com/sheyll/b9-vm-image-builder/issues
copyright:           2015 Sven Heyll <svh@posteo.de>
category:            Development
build-type:          Simple
extra-source-files:  README.md, LICENSE, TODO.org, Setup.hs, stack.yaml, b9.cabal, .gitignore, .travis.yml, CONTRIBUTORS
cabal-version:       >=1.10

Flag IntegrationTests
     Description: Enable tests that will create and convert real file system
                  images and launch containers
     Default: True
     Manual: True

source-repository head
  type:                 git
  location:             git://github.com/sheyll/b9-vm-image-builder.git

library
  exposed-modules:   B9
                   , B9.Common
                   , B9.B9Config
                   , B9.B9IO
                   , B9.B9IO.Impl
                   , B9.B9IO.IoCompiler
                   , B9.B9Monad
                   , B9.Builder
                   , B9.CommonTypes
                   , B9.ConfigUtils
                   , B9.Content
                   , B9.Content.AST
                   , B9.Content.ErlTerms
                   , B9.Content.ErlangPropList
                   , B9.Content.PropList
                   , B9.Content.StringTemplate
                   , B9.Content.SystemD
                   , B9.Content.YamlObject
                   , B9.Dsl
                   , B9.Dsl.CloudInit
                   , B9.Dsl.Content
                   , B9.Dsl.Core
                   , B9.Dsl.ExecutionEnvironment
                   , B9.Dsl.File
                   , B9.Dsl.FileSystem
                   , B9.Dsl.Handle
                   , B9.Dsl.ImageRepository
                   , B9.Dsl.Logging
                   , B9.Dsl.PartitionedVmImage
                   , B9.Dsl.UpdateServerRoot
                   , B9.Dsl.VmImage
                   , B9.DiskImages
                   , B9.ExecEnv
                   , B9.FileSystems
                   , B9.FileSystemsImpl
                   , B9.GPT
                   , B9.LibVirtLXC
                   , B9.Logging
                   , B9.MBR
                   , B9.PartitionTable
                   , B9.QCUtil
                   , B9.QemuImg
                   , B9.Repository
                   , B9.RepositoryIO
                   , B9.ShellScript
  other-modules:   Paths_b9
  -- other-extensions:
  build-depends:     ConfigFile
                   , QuickCheck
                   , aeson
                   , async
                   , base >= 4.8 && < 5
                   , bifunctors
                   , binary
                   , boxes
                   , bytestring
                   , cereal
                   , conduit
                   , conduit-extra
                   , conduit-combinators
                   , containers
                   , data-default
                   , directory
                   , filepath
                   , free
                   , hashable
                   , lens
                   , mtl
                   , optparse-applicative
                   , parallel
                   , parsec
                   , pretty
                   , pretty-show
                   , process
                   , random
                   , semigroups
                   , singletons
                   , syb
                   , tagged
                   , template
                   , text
                   , time
                   , transformers
                   , unordered-containers
                   , vector
                   , vector-binary-instances
                   , yaml
  default-extensions: TupleSections
                    , GeneralizedNewtypeDeriving
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , RankNTypes
                    , FlexibleContexts
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , GADTs
                    , PolyKinds
                    , DataKinds
                    , KindSignatures
                    , TypeFamilies
                    , DeriveFunctor
                    , TemplateHaskell
                    , StandaloneDeriving
                    , CPP
                    , TypeSynonymInstances
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -with-rtsopts=-N -Wall
                     -fwarn-unused-binds -fno-warn-unused-do-bind

executable b9c
  main-is:           Main.hs
  other-modules:     Paths_b9
  -- other-extensions:
  build-depends:     b9
                   , ConfigFile
                   , base >= 4.8 && < 5
                   , bytestring
                   , directory
                   , optparse-applicative
  hs-source-dirs:    src/cli
  default-language:  Haskell2010
  default-extensions: TupleSections
                    , GeneralizedNewtypeDeriving
                    , DeriveDataTypeable
                    , RankNTypes
                    , FlexibleContexts
                    , GADTs
                    , DataKinds
                    , KindSignatures
                    , TypeFamilies
                    , DeriveFunctor
                    , TemplateHaskell
                    , CPP
  ghc-options:       -threaded -with-rtsopts=-N -Wall
                     -fwarn-unused-binds -fno-warn-unused-do-bind

test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    src/tests
  default-language:  Haskell2010
  main-is:           Spec.hs
  other-modules:     B9.Content.ErlTermsSpec
                   , B9.Content.ErlangPropListSpec
                   , B9.Content.YamlObjectSpec
                   , B9.Dsl.CoreSpec
                   , B9.SpecExtra
                   , B9.B9IOSpec
                   , B9.B9IO.ImplSpec
                   , B9.DslSpec
                   , B9.BuilderSpec
                   , B9.LoggingSpec
  if flag(IntegrationTests)
    CC-Options: "-DINTEGRATION_TESTS"
    CPP-Options: -DINTEGRATION_TESTS

  build-depends:     QuickCheck
                   , aeson
                   , b9
                   , base >= 4.8 && < 5
                   , bytestring
                   , containers
                   , data-default
                   , directory
                   , filepath
                   , hspec
                   , hspec-expectations
                   , mtl
                   , lens
                   , semigroups
                   , text
                   , unordered-containers
                   , vector
                   , yaml
  default-extensions: TupleSections
                    , GeneralizedNewtypeDeriving
                    , DeriveDataTypeable
                    , RankNTypes
                    , FlexibleContexts
                    , GADTs
                    , DataKinds
                    , KindSignatures
                    , TypeFamilies
                    , DeriveFunctor
                    , TemplateHaskell
                    , CPP
