name:                b9
version:             0.7.0
synopsis:            A tool and library for building virtual machine images.

description:         Build virtual machine images for vm-deployments; resize,
                     un-partition, create from scratch or convert disk image
                     files in a variety of formats; assemble and generate all
                     associated files from templates and regular files.


                     VM images can further be modifed through scripts, which are
                     executed in LXC containers into which the vm-images as well
                     as arbitrary directories from the host are mounted.


                     All assembled files can also be accessed by vm build
                     scripts through a special directory mounted in the build
                     container, and/or can be written to directories, ISO- or
                     VFAT-images.


                     The ISO/VFAT images that B9 creates are compatible to
                     'cloud-init's 'NoCloud' data source;


                     B9 is also very well suited for compiling in a
                     containerized environment. For these applications, the
                     images can be marked as 'Transient' to indicate no further
                     interest in the VM-image itself, and B9 will discard them
                     after the build.


                     B9 will never over-write source files, not even large
                     vm-image files - there is no intended way to modify a
                     source vm-image file 'in-place'.


                     B9 operates in random build directories, which are
                     discarded when the build exists.

license:             MIT
license-file:        LICENSE
author:              Sven Heyll <svh@posteo.de>
maintainer:          svh@posteo.de
homepage:            https://github.com/sheyll/b9-vm-image-builder
bug-reports:         https://github.com/sheyll/b9-vm-image-builder/issues
copyright:           2015,2016 Sven Heyll <svh@posteo.de>
category:            DevOps
build-type:          Simple
extra-source-files:  README.md, LICENSE, TODO.org, Setup.hs, stack.yaml, b9.cabal, .gitignore, .travis.yml, CONTRIBUTORS
cabal-version:       >=1.10

Flag IntegrationTests
     Description: Enable tests that will create and convert real file system
                  images and launch containers
     Default: True
     Manual: True

source-repository head
  type:                 git
  location:             git://github.com/sheyll/b9-vm-image-builder.git

library
  exposed-modules:   B9.Core.Dsl.Basic.Document.Dictionaries.ErlangTerm
                   , B9.Core.Dsl.Basic.Document.Dictionaries.HaskellTerm
                   , B9.Core.Dsl.Basic.Document.Dictionaries.Json
                   , B9.Core.Dsl.Basic.Document.Dictionaries.Yaml
                   , B9.Core.Dsl.Basic.Document.Dictionary
                   , B9.Core.Dsl.Basic.Document.Raw
                   , B9.Core.Dsl.Basic.System.Command
                   , B9.Core.Dsl.Basic.System.File
                   , B9.Core.Dsl.Basic.System.Http
                   , B9.Core.Dsl.Basic.Mono
                   , B9.Core.Dsl.Types.BuildStep
                   , B9.Core.Dsl.Types.Handle
                   , B9.Core.Dsl.Interpreter
                   , B9.Core.System.B9IO
                   , B9.Core.System.Command
                   , B9.Core.System.Configuration
                   , B9.Core.System.Directory
                   , B9.Core.Util.DynMap
                   , B9.Core.Util.Logging
                   , B9.Core.Util.PropList
                   , B9.Core.Util.Size
                   , B9.Core.Prelude
  other-modules:   Paths_b9
  -- other-extensions:
  build-depends:     ConfigFile
                   , QuickCheck
                   , aeson
                   , async
                   , base >= 4.8 && < 5
                   , bifunctors
                   , binary
                   , boxes
                   , bytestring
                   , cereal
                   , conduit
                   , conduit-extra
                   , conduit-combinators
                   , containers
                   , data-default
                   , directory
                   , filepath
                   , free
                   , hashable
                   , lens
                   , mtl
                   , optparse-applicative
                   , parallel
                   , parsec
                   , pretty
                   , pretty-show
                   , process
                   , random
                   , syb
                   , tagged
                   , template
                   , text
                   , time
                   , transformers
                   , unordered-containers
                   , uuid
                   , vector
                   , vector-binary-instances
                   , yaml
  default-extensions: ConstraintKinds
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleInstances
                    , FlexibleContexts
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , MultiParamTypeClasses
                    , QuasiQuotes
                    , RecordWildCards
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilyDependencies
                    , TypeFamilies
                    , TypeInType
                    , TypeOperators
                    , TypeSynonymInstances
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -Wall -fwarn-unused-binds -fno-warn-unused-do-bind

-- executable b9c
--   main-is:           Main.hs
--   other-modules:     Paths_b9
--   -- other-extensions:
--   build-depends:     b9
--                    , ConfigFile
--                    , base >= 4.8 && < 5
--                    , bytestring
--                    , directory
--                    , optparse-applicative
--   hs-source-dirs:    src/cli
--   default-language:  Haskell2010
--   default-extensions: TupleSections
--                     , GeneralizedNewtypeDeriving
--                     , DeriveDataTypeable
--                     , RankNTypes
--                     , FlexibleContexts
--                     , GADTs
--                     , DataKinds
--                     , KindSignatures
--                     , TypeFamilies
--                     , DeriveFunctor
--                     , TemplateHaskell
--                     , CPP
--   ghc-options:       -threaded -with-rtsopts=-N -Wall
--                      -fwarn-unused-binds -fno-warn-unused-do-bind
--
test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    src/spec
  default-language:  Haskell2010
  main-is:           Spec.hs
  other-modules:     B9Spec.Prelude
                   , B9Spec.Core.Dsl.Basic.BasicSpec
                   , B9Spec.Core.Dsl.Basic.Document.Dictionaries.ErlangTermSpec
                   , B9Spec.Core.Dsl.Basic.Document.Dictionaries.YamlSpec
  if flag(IntegrationTests)
    CC-Options: "-DINTEGRATION_TESTS"
    CPP-Options: -DINTEGRATION_TESTS

  build-depends:     QuickCheck
                   , aeson
                   , b9
                   , base >= 4.8 && < 5
                   , bytestring
                   , containers
                   , data-default
                   , directory
                   , filepath
                   , hspec
                   , hspec-expectations
                   , mtl
                   , lens
                   , semigroups
                   , text
                   , unordered-containers
                   , vector
                   , yaml
  default-extensions: ConstraintKinds
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleInstances
                    , FlexibleContexts
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , MultiParamTypeClasses
                    , QuasiQuotes
                    , RecordWildCards
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilyDependencies
                    , TypeFamilies
                    , TypeInType
                    , TypeOperators
                    , TypeSynonymInstances
