name:                b9
version:             0.6.0

synopsis:            DevOps configuration management and offline orchestration

description:         As a developer and operator of a complex service,
                     comprised of several Linux machines hosting several applications
                     talking to each other, I would like to fearlessly manage
                     multi server system installations and configurations.

                     This tool tackles this requirement by allowing the user to
                     declare reusable installation scripts and configurations
                     using a non-intimidating configuration DSL.

license:             MIT
license-file:        LICENSE
author:              Sven Heyll <svh@posteo.de>
maintainer:          svh@posteo.de
homepage:            https://github.com/sheyll/b9-vm-image-builder
bug-reports:         https://github.com/sheyll/b9-vm-image-builder/issues
copyright:           2015, 2016, 2017, 2018 Sven Heyll <svh@posteo.de>
category:            Development
build-type:          Simple
extra-source-files:  README.md
                   , LICENSE
                   , TODO.org
                   , Setup.hs
                   , b9.cabal
                   , .gitignore
                   , prepare_release.sh
                   , stack.yaml
                   , .travis.yml
                   , CONTRIBUTORS
cabal-version:       >=1.22

source-repository head
  type:                 git
  location:             git://github.com/sheyll/b9-vm-image-builder.git

library
  exposed-modules:   B9
                   , B9.ArtifactGenerator
                   , B9.ArtifactGeneratorImpl
                   , B9.B9Config
                   , B9.B9Config.LibVirtLXC
                   , B9.B9Config.Repository
                   , B9.B9Monad
                   , B9.Content.AST
                   , B9.Content.ErlangPropList
                   , B9.Content.ErlTerms
                   , B9.Content.Generator
                   , B9.Content.StringTemplate
                   , B9.Content.YamlObject
                   , B9.DiskImageBuilder
                   , B9.DiskImages
                   , B9.DSL
                   , B9.ExecEnv
                   , B9.LibVirtLXC
                   , B9.MBR
                   , B9.PartitionTable
                   , B9.QCUtil
                   , B9.Repository
                   , B9.RepositoryIO
                   , B9.Shake
                   , B9.Shake.Actions
                   , B9.Shake.SharedImageRules
                   , B9.ShellScript
                   , B9.Vm
                   , B9.VmBuilder
                   , Data.ConfigFile.B9Extras
                   , System.IO.B9Extras
  other-modules:   Paths_b9
  -- other-extensions:
  build-depends:     QuickCheck
                   , aeson
                   , async
                   , base
                   , base64-bytestring
                   , binary
                   , bytestring
                   , configuration-tools
                   , conduit
                   , conduit-extra
                   , directory
                   , filepath
                   , glabrous
                   , hashable
                   , lens
                   , mtl
                   , time
                   , parallel
                   , parsec
                   , pretty-show
                   , pretty
                   , process
                   , random
                   , shake
                   , syb
                   , text
                   , transformers
                   , unordered-containers
                   , vector
                   , yaml
                   , bifunctors
                   , free
                   , boxes

  default-extensions: TupleSections
                    , GeneralizedNewtypeDeriving
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , RankNTypes
                    , FlexibleContexts
                    , GADTs
                    , DataKinds
                    , KindSignatures
                    , TypeFamilies
                    , DeriveFunctor
                    , TemplateHaskell
                    , StandaloneDeriving
                    , CPP
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -fwarn-unused-binds -fno-warn-unused-do-bind

executable b9c
  main-is:           Main.hs
  other-modules:     Paths_b9
  -- other-extensions:
  build-depends:     aeson
                   , b9
                   , base
                   , bytestring
                   , configuration-tools
                   , directory
                   , glabrous
                   , lens
                   , optparse-applicative
  hs-source-dirs:    src/cli
  default-language:  Haskell2010
  default-extensions: TupleSections
                    , GeneralizedNewtypeDeriving
                    , DeriveDataTypeable
                    , RankNTypes
                    , FlexibleContexts
                    , GADTs
                    , DataKinds
                    , KindSignatures
                    , TypeFamilies
                    , DeriveFunctor
                    , TemplateHaskell
                    , CPP
  ghc-options:       -threaded -with-rtsopts=-N -Wall
                     -fwarn-unused-binds -fno-warn-unused-do-bind

test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    src/tests
  default-language:  Haskell2010
  main-is:           Spec.hs
  other-modules:     B9.Content.ErlTermsSpec
                   , B9.Content.ErlangPropListSpec
                   , B9.Content.YamlObjectSpec
                   , B9.ArtifactGeneratorImplSpec
                   , B9.DiskImagesSpec
                   , Paths_b9
  build-depends:     base
                   , b9
                   , hspec
                   , hspec-expectations
                   , QuickCheck
                   , aeson
                   , yaml
                   , vector
                   , unordered-containers
                   , bytestring
                   , text
  default-extensions: TupleSections
                    , GeneralizedNewtypeDeriving
                    , DeriveDataTypeable
                    , RankNTypes
                    , FlexibleContexts
                    , GADTs
                    , DataKinds
                    , KindSignatures
                    , TypeFamilies
                    , DeriveFunctor
                    , TemplateHaskell
                    , CPP
